--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -17,9 +17,9 @@
                 {% if post.author %}
                 <!--<span class="meta-footer-thumb">
                 <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-                </span>-->                
+                </span>-->
                 <span class="author-meta">
-                <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
+                <span class="post-name"><a target="_blank" href="{{ author.web }}">Por {{ author.display_name }}</a></span><br/>
                 {% endif %}
                 <span class="post-date">{{ post.date | date_to_string }}</span>
                 </span>
