--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,23 +1,30 @@
-
-  {% include analytics.html %}     
-  <meta charset="utf-8" />
+<meta charset="utf-8">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">-->
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--
+  The above 2 meta tags *must* come first in the <head>
+  to consistently ensure proper document rendering.
+  Any other head element should come *after* these tags.
+ -->
   <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
   <!--Feed-->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title | escape }}" href="{{ site.feed.path | default: 'feed.xml' | relative_url }}">  
+  <link rel="alternate" type="application/rss+xml"  title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+
+  {% include analytics.html %}  
+
+  <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
+  {% if page.description %}
+     <meta name="description" content="{{ page.description }}">
+  {% else %} 
+     <meta name="description" content="{{ site.description }}">
+  {% endif %} 
+
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
-  <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-<!-- <title>{{ page.title }} | {{site.name}}</title>-->
-  {% if page.description %}
-     <meta name="description" content="{{ page.description }}">
-  {% endif %} 
-
-
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
 
   {% if layout.common-ext-css %}
