--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -2,12 +2,17 @@
   <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
   {% endif %}
 
+  <meta property="og:site_name" content="{{ site.title }}">
+
   {% if page.facebook_title %}
   <meta property="og:title" content="{{ page.facebook_title }}" />
+  <meta property="og:type" content="article">
   {% elsif page.title %}
   <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:type" content="article">
   {% else %}
   <meta property="og:title" content="{{ site.title }}" />
+  <meta property="og:type" content="website">
   {% endif %}
 
   {% if page.facebook_description %}
@@ -15,18 +20,15 @@
   {% elsif page.description %}
   <meta property="og:description" content="{{ page.description }}">
   {% else %}
-  <meta property="og:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
+  <meta property="og:description" content="{{ site.description }}">
   {% endif %}
 
-
-  <meta property="og:type" content="website" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 
   {% if page.id %}
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
   {% else %}
   <meta property="og:url" content="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
-  <link rel="canonical" href="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
   {% endif %}
 
   {% if page.facebook_image %}
