--- a/_includes/meta/icon.html
+++ b/_includes/meta/icon.html
@@ -2,7 +2,7 @@
 <!-- Place favicon.ico in the root directory - no tag necessary -->
 
 <!-- Icon in the highest resolution we need it for -->
-<link rel="icon" sizes="192x192" href="/path/to/icon.png">
+<link rel="icon" sizes="192x192" href="{{ site.baseurl }}/assets/images/logo.png">
 
 <!-- Apple Touch Icon (reuse 192px icon.png) -->
 <link rel="apple-touch-icon" href="/path/to/apple-touch-icon.png">
