--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,17 +8,17 @@
  -->
   <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
   <!--Feed-->
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title | escape }}" href="{{ site.feed.path | default: 'feed.xml' | relative_url }}">  
-  <link rel="alternate" type="application/rss+xml"  title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+  {% feed_meta %}
 
+  <!--Google Analytics-->
   {% include analytics.html %}  
 
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-  {% if page.description %}
-     <meta name="description" content="{{ page.description }}">
+  {% if page.meta_description %}
+     <meta name="description" content="{{ page.meta_description }}">
   {% else %} 
-     <meta name="description" content="{{ site.description }}">
+     <meta name="description" content="{{ site.meta_description }}">
   {% endif %} 
 
   
