--- a/_includes/meta/twitter.html
+++ b/_includes/meta/twitter.html
@@ -2,17 +2,13 @@
   <meta name="twitter:site" content="@{{ site.author.twitter }}" />
   <meta name="twitter:creator" content="@{{ site.author.twitter }}" />
 
-  {% if page.twitter_title %}
-  <meta name="twitter:title" content="{{ page.twitter_title }}" />
-  {% elsif page.title %}
+  {% if page.title %}
   <meta name="twitter:title" content="{{ page.title }}" />
   {% else %}
   <meta name="twitter:title" content="{{ site.title }}" />
   {% endif %}
 
-  {% if page.twitter_description %}
-  <meta name="twitter:description" content="{{ page.twitter_description }}">
-  {% elsif page.description %}
+  {% if page.meta_description %}
   <meta name="twitter:description" content="{{ page.description }}">
   {% else %}
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
