--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -3,6 +3,7 @@
   {% endif %}
 
   <meta property="og:site_name" content="{{ site.title }}">
+  <meta property="og:locale" content="pt_BR" />
 
   {% if page.title %}
   <meta property="og:title" content="{{ page.title }}" />
@@ -31,3 +32,14 @@
   {% else %}
   <meta property="og:image" content="{{ page.image }}" />
   {% endif %}
+
+  {% for tag in page.categories %}
+    <meta property="article:tag" content="{{tag}}" />
+  {% endfor %}
+
+
+<meta property="og:type" content="article">
+<meta property="article:author" content="Autor do artigo">
+article:publisher	Profile	A Facebook page URL or ID of the publishing entity
+<meta property="article:section" content="Seção do artigo">
+<meta property="article:published_time" content="date_time">
