--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -1,45 +1,46 @@
-  {% if site.fb_app_id %}
-  <meta property="fb:app_id" content="{{ site.fb_app_id }}" />
-  {% endif %}
+{% if site.fb_app_id %}
+   <meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
+{% endif %}
 
-  <meta property="og:site_name" content="{{ site.title }}">
-  <meta property="og:locale" content="pt_BR" />
+   <meta property="og:site_name" content="{{ site.title }}">
+   <meta property="og:locale" content="pt_BR" />
 
-  {% if page.title %}
-  <meta property="og:title" content="{{ page.title }}" />
-  <meta property="og:type" content="article">
-  {% else %}
-  <meta property="og:title" content="{{ site.title }}" />
-  <meta property="og:type" content="website">
-  {% endif %}
+{% if page.title %}
+   <meta property="og:title" content="{{ page.title }}" />
+   <meta property="og:type" content="article">
+   <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
+   <meta property="article:publisher"	content="https://www.facebook.com/{{ site.facebook.publisher }}">
+   <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" >
+   {% if page.tags %}   
+      {% for tag in page.tags %}
+         <meta property="article:tag" content="{{tag}}" />
+      {% endfor %}
+   {% endif %}
+   {% if page.categories %}
+      {% for category in page.categories limit:1 %}
+         <meta property="article:section" content="{{ category }}" >
+      {% endfor %}
+   {% endif %}
+{% else %}
+   <meta property="og:title" content="{{ site.title }}" />
+   <meta property="og:type" content="website">
+{% endif %}
 
-  {% if page.meta_description %}
-  <meta property="og:description" content="{{ page.meta_description }}">
-  {% else %}
-  <meta property="og:description" content="{{ site.meta_description }}">
-  {% endif %}
+{% if page.meta_description %}
+   <meta property="og:description" content="{{ page.meta_description }}">
+{% else %}
+   <meta property="og:description" content="{{ site.meta_description }}">
+{% endif %}
 
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+{% if page.id %}
+   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+{% else %}
+   <meta property="og:url" content="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
+{% endif %}
 
-  {% if page.id %}
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-  {% else %}
-  <meta property="og:url" content="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
-  {% endif %}
+{% if page.facebook_image %}
+   <meta property="og:image" content="{{ page.facebook_image }}" />
+{% else %}
+   <meta property="og:image" content="{{ page.image }}" />
+{% endif %}
 
-  {% if page.facebook_image %}
-  <meta property="og:image" content="{{ page.facebook_image }}" />
-  {% else %}
-  <meta property="og:image" content="{{ page.image }}" />
-  {% endif %}
-
-  {% for tag in page.categories %}
-    <meta property="article:tag" content="{{tag}}" />
-  {% endfor %}
-
-
-<meta property="og:type" content="article">
-<meta property="article:author" content="Autor do artigo">
-article:publisher	Profile	A Facebook page URL or ID of the publishing entity
-<meta property="article:section" content="Seção do artigo">
-<meta property="article:published_time" content="date_time">
