--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -8,7 +8,7 @@
 {% if page.title %}
    <meta property="og:title" content="{{ page.title }}" />
    <meta property="og:type" content="article">
-   <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
+   <meta property="article:author" content="https://www.facebook.com/{{ site.authors.facebook }}">
    <meta property="article:publisher"	content="https://www.facebook.com/{{ site.facebook.publisher }}">
    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" >
    {% if page.tags %}   
