--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,7 +73,7 @@
 <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">  
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 
-{% seo %}	
+<!-- {% seo %}	-->
 	
 {{ site.sharethis }}	  
  
