--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -40,7 +40,7 @@
 {% endif %}
 
 {% if page.facebook_image %}
-   <meta property="og:image" content="{{ page.facebook_image }}" />
+   <meta property="og:image1" content="{{ page.facebook_image }}" />
 {% else %}
    <meta property="og:image2" content="{{ page.image }}" />
 {% endif %}
