--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -40,8 +40,8 @@
 {% endif %}
 
 {% if page.facebook_image !='' and page.facebook_image %}
-   <meta property="og:image" content="{{ page.facebook_image }}" />
+   <meta property="og:image" content="{{ site.url }}{{ page.facebook_image }}" />
 {% else %}
-   <meta property="og:image" content="{{ page.image }}" />
+   <meta property="og:image" content="{{ site.url }}{{ page.image }}" />
 {% endif %}
 
