--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -2,7 +2,7 @@
    <meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
 {% endif %}
 
-   <meta property="og:site_name" content="{{ site.title }}">
+   <meta property="og:site_name" content="{{ site.name }}">
    <meta property="og:locale" content="pt_BR" />
 
 {% if page.title %}
