--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,8 @@
   {% include meta/facebook_opengraph.html %} 
   {% include meta/twitter.html %}
 
+
+<!--
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
       {% include ext-css.html css=css %}
@@ -64,14 +66,14 @@
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family={{ font }}" />
     {% endfor %}
   {% endif %}
+-->
 
 
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
 <!-- <link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet"> -->
-<link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">  
-<link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+<!-- <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">   -->
+<!-- <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet"> -->
 
 	
 {{ site.sharethis }}	  
