--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,10 +8,10 @@
  -->
   <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
   <!--Feed-->
-  {% feed_meta %}
+  {% feed_meta_ %}
 
   <!--Google Analytics-->
-  {% include analytics.html %}  
+  {% include analytics_.html %}  
 
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
@@ -25,12 +25,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
 
-  {% include meta/icon.html %}  
-  {% include meta/facebook_opengraph.html %} 
-  {% include meta/twitter.html %}
+  {% include meta/icon_.html %}  
+  {% include meta/facebook_opengraph_.html %} 
+  {% include meta/twitter_.html %}
 
 
-<!--
+
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
       {% include ext-css.html css=css %}
@@ -66,15 +66,15 @@
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family={{ font }}" />
     {% endfor %}
   {% endif %}
--->
 
 
-<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
-<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
-<!-- <link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet"> -->
-<!-- <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">   -->
-<!-- <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet"> -->
+
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> 
+ <link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet"> 
+ <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">   
+ <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet"> 
 
 	
-{{ site.sharethis }}	  
+{{ site.sharethis_ }}	  
  
