--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -1,4 +1,4 @@
-{% if site.fb_app_id %}
+{% if site.facebook.app_id %}
    <meta property="fb:app_id" content="{{ site.facebook.app_id }}" />
 {% endif %}
 
