--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <!--Google Analytics-->
   {% include analytics.html %}  
 
-  <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   {% if page.meta_description %}
      <meta name="description" content="{{ page.meta_description }}">
