--- a/_includes/meta/twitter.html
+++ b/_includes/meta/twitter.html
@@ -1,8 +1,8 @@
-{% if page.twitter_image != '' and page.twitter_image %}
+<!--{% if page.twitter_image != '' and page.twitter_image %}-->
   <meta name="twitter:card" content="summary_large_image" />
-{% else %}
+<!--{% else %}
   <meta name="twitter:card" content="summary" />
-{% endif %}
+{% endif %} -->
 
   <meta name="twitter:site" content="@{{ site.twitter.username }}" />
 
