--- a/_includes/meta/twitter.html
+++ b/_includes/meta/twitter.html
@@ -1,29 +1,8 @@
-<!--{% if page.twitter_image != '' and page.twitter_image %}-->
-  <meta name="twitter:card" content="summary_large_image" />
-<!--{% else %}
-  <meta name="twitter:card" content="summary" />
-{% endif %} -->
-
-  <meta name="twitter:site" content="@{{ site.twitter.username }}" />
-
-  <meta name="twitter:creator" content="@{{ site.authors[page.author].twitter }}" />
-
-{% if page.title %}
-  <meta name="twitter:title" content="{{ page.title }}" />
-{% else %}
-  <meta name="twitter:title" content="{{ site.title }}" />
-{% endif %}
-
-{% if page.meta_description %}
-  <meta name="twitter:description" content="{{ page.meta_description }}">
-{% else %}
-  <meta name="twitter:description" content="{{ site.meta_description }}">
-{% endif %}
-
-  <meta name="twitter:url" content="{{ page.url | replace:'/index.html','/' | prepend: site.baseurl | prepend: site.url }}">
-
-{% if page.twitter_image != '' and page.twitter_image %}
-  <meta name="twitter:image" content="{{ site.url }}{{ page.twitter_image }}" />
-{% else %}
-  <meta name="twitter:image" content="{{ site.url }}{{ page.image }}" />
-{% endif %}
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@{{ site.twitter.username }}" />
+<meta name="twitter:creator" content="@{{ site.authors[page.author].twitter }}" />
+<meta name="twitter:title" content="{{ page.title | default: site.title | smartify }}" />
+<meta name="twitter:description" content="{{ page.meta_description | default site.meta_description | smartify }}">
+<meta name="twitter:url" content="{{ page.url | replace:'/index.html','/' | prepend: site.baseurl | prepend: site.url }}">
+<!--  <meta name="twitter:image" content="{{ site.url }}{{ page.image }}" /> . -->
+<meta name="twitter:image" content="{% if page.title %}{{ site.url | append: page.image }}{% else %}{{ site.url | append: site.social_image_path }}{% endif %}">
