--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="{{ site.manifest_theme_color | default: 'white' }}"/>  
 
- {% include meta/social.html %} 
+  {% include meta/social.html %} 
+  {% include meta/favicon.html %}  
 
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> 
